<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut
        android:shortcutId="wifi"
        android:icon="@mipmap/item_captive_portal_login"
        android:shortcutShortLabel="@string/captive_portal_login">

        <intent
            android:action="android.intent.action.VIEW"
            android:data="nfushortcuts://captive_portal_login"/>
    </shortcut>

    <shortcut
        android:shortcutId="no_scan_pass"
        android:icon="@mipmap/item_no_scan_pass"
        android:shortcutShortLabel="@string/no_scan_pass">

        <intent
            android:action="android.intent.action.VIEW"
            android:data= "alipays://platformapi/startapp?appId=20000067&amp;url=http://nfuedu.zftcloud.com/index/travel_record/scanCode/path/1?chInfo=ch_share__chsub_CopyLink"/>
    </shortcut>

    <shortcut
        android:shortcutId="access_code"
        android:icon="@mipmap/item_access_code"
        android:shortcutShortLabel="@string/access_code">

        <intent
            android:action="android.intent.action.VIEW"
            android:data= "alipays://platformapi/startapp?appId=2021002142606387&amp;page=pages%2Findex%2Findex"/>
    </shortcut>

    <shortcut
        android:shortcutId="health_code"
        android:icon="@mipmap/item_health_code"
        android:shortcutShortLabel="@string/health_code">

        <intent
            android:action="android.intent.action.VIEW"
            android:data="nfushortcuts://health_code"/>
    </shortcut>
</shortcuts>